# inkspect

./: .gitignore  Cargo.toml  README.md
.prompts/: initial.md
src/: cli.rs  config.rs  core.rs  editor.rs  llm.rs  main.rs  setup.rs
src/llm/: claude.rs  gemini.rs  trait.rs
