[package]
name = "inkspect"
version = "0.2.0"
authors = ["Hervé Beraud <herveberaud.pro@gmail.com>"]
edition = "2024"
description = "A CLI tool to streamline your LLM workflow by bringing prompt refinement and generation directly into your favorite editor"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/4383/inkspect"
repository = "https://github.com/4383/inkspect"
keywords = ["editor", "cli", "refinement", "llm", "prompt-engineering"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.42", features = ["derive"] }
confy = "1.0.0"
console = "0.16.0"
env_logger = "0.11.8"
indicatif = "0.18.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.4"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"

